// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo should render 1`] = `
<div>
  <span
    class="relative"
  >
    <div
      class="absolute -top-4 -right-7 rounded-md border-2 border-white bg-theme-secondary-800 px-0.5 font-bold text-white dark:border-theme-secondary-900 css-85x3m0"
    >
      BETA
    </div>
    <svg>
      payvo-logo.svg
    </svg>
  </span>
</div>
`;

exports[`Logo should render with height 1`] = `
<div>
  <span
    class="relative"
  >
    <div
      class="absolute -top-4 -right-7 rounded-md border-2 border-white bg-theme-secondary-800 px-0.5 font-bold text-white dark:border-theme-secondary-900 css-85x3m0"
    >
      BETA
    </div>
    <svg
      height="20"
    >
      payvo-logo.svg
    </svg>
  </span>
</div>
`;
